15/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: frontend-something
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
